# SSN

backend/: pyproject.toml
backend/apps/common/: fields.py  utils.py
backend/apps/data/: models.py
backend/apps/data/api/: serializers.py  urls.py  views.py
backend/apps/posts/: models.py
backend/apps/posts/api/: serializers.py  urls.py  views.py
backend/apps/users/: models.py
backend/apps/users/api/: serializers.py  urls.py  views.py
backend/backend/: example.env  settings.py  urls.py  yasg.py
frontend/: package-lock.json  package.json
frontend/src/: store.js
frontend/src/actions/: alert.js  auth.js  post.js  types.js
frontend/src/utils/: setAuthToken.js
